:zap: Adding express and cors middleware

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,34 +1,17 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true,
-    "baseUrl": ".",
-    "outDir": "build/dist",
+    "target": "esnext",
     "module": "esnext",
-    "target": "es2017",
-    "lib": ["es6", "dom", "esnext.asynciterable", "es2017"],
-    "sourceMap": true,
-    "allowJs": true,
-    "jsx": "react",
+    "outDir": "./dist/",
+    "rootDir": "./src",
     "moduleResolution": "node",
-    "rootDir": "src",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "removeComments": true
+    "types": ["node"],
+    "esModuleInterop": true,
+    "strict": true,
+    "lib": ["es2020"]
   },
+  "include": ["./src"],
   "exclude": [
     "node_modules",
-    "build",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "src/setupTests.ts"
   ]
 }
