--- a/server/package.json
+++ b/server/package.json
@@ -3,20 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc -w",
-    "start": "node dist/app.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/app.ts",
-    "build": "tsc"
+    "dev": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.14",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
