--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@twilio-paste/core": "^17.0.1",
+    "@twilio-paste/icons": "^9.4.0",
     "axios": "^1.1.3",
+    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.5",
+    "react-router-dom": "^6.4.3",
+    "socket.io-client": "^4.5.3",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
