--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-kakao-maps-sdk": "^1.1.5",
     "react-router-dom": "^6.4.3",
     "socket.io-client": "^4.5.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "vite-plugin-html-env": "^1.2.7"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.7",
