--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.5",
     "react-kakao-maps-sdk": "^1.1.5",
     "react-router-dom": "^6.4.3",
     "socket.io-client": "^4.5.3",
