--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "vite-plugin-html-env": "^1.2.7"
   },
   "devDependencies": {
+    "@twilio-paste/types": "^3.1.9",
     "@types/google-map-react": "^2.1.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
