--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.1.1",
     "@types/express": "^4.17.14",
     "cors": "^2.8.5",
     "express": "^4.18.2",
