--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_APP_KAKAOMAP_API=dapi.kakao.com/v2/maps/sdk.js?appkey=611956c9f898c611dbe9a99efa5162fe
+VITE_APP_KAKAOMAP_API=dapi.kakao.com/v2/maps/sdk.js?appkey=
